updated the index.html

--- a/jubliant-meme/webapp/FlaskApp/templates/index.html
+++ b/jubliant-meme/webapp/FlaskApp/templates/index.html
@@ -34,8 +34,8 @@
                 </a>
               </div>
               <div class="col-sm-5">
-                <a class="btn btn-block btn-social btn-twitter" href="{{ url_for('wapi.oauth_authorize', provider='Twitter') }}" role="button">
-                  <span class="fa fa-twitter"></span> Sign in with Twitter
+                <a class="btn btn-block btn-social btn-google" href="{{ url_for('wapi.oauth_authorize', provider='Google') }}" role="button">
+                  <span class="fa fa-google"></span> Sign in with Google
                 </a>
               </div>
             </div>
