--- a/jubliant-meme/webapp/FlaskApp/static/css/app.css
+++ b/jubliant-meme/webapp/FlaskApp/static/css/app.css
@@ -8,18 +8,7 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 
-  body{
-    background: #00589F;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00589F', endColorstr='#0073CF', GradientType=0);
-    background: -webkit-linear-gradient(to bottom, #00589F 50%, #0073CF) !important;
-    background: -moz-linear-gradient(to bottom, #00589F 50%, #0073CF) !important;
-    background: -ms-linear-gradient(to bottom, #00589F 50%, #0073CF) !important;
-    background: -o-linear-gradient(to bottom, #00589F 50%, #0073CF) !important;
-    background: linear-gradient(to bottom, #00589F 50%, #0073CF) !important;
-    color: white;
-  }
-
-  div.well{
+  .well{
     height: 250px;
   }
 
